--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
-tmux set -g prefix C-x
+set -g prefix C-q
  
-tmux unbind C-b
+unbind C-b
  
-tmux bind C-x send-prefix
+bind C-q send-prefix
 
+set-option -g history-limit 3000
